# Gyoto

./: .gitignore  AUTHORS  BUGS.md  ChangeLog  GyotoXmasS.h  GyotoXmasSKS.h  INSTALL  INSTALL.Gyoto  INSTALL.Gyoto.md  INSTALL.ubuntu  Makefile  Makefile.am  Makefile.in  Makefile.obs  Makefile.old  NEWS  README  README.Developers  README.SIGFPE  README.lorene  README.md  StdPlug.C  TODO  TODO.md  VERSION  XmasS.C  aclocal.m4  config.h.in  configure  configure.ac  git-post-merge  gyoto.in  local_settings  local_settings_ubuntu
debian/: README.source  changelog  control  copyright  docs  gyoto-doc.doc-base  gyoto.install  gyoto.manpages  libgyoto0-dev.install  libgyoto0-dev.links  libgyoto0.install  libgyoto0.links  libgyoto0.symbols  rules  yorick-gyoto.examples  yorick-gyoto.manpages  yorick-gyoto.ynstall
debian/lintian-overrides.d/: yorick-gyoto
debian/patches/: configuration
doc/: Makefile.in  Makefile.old  doxyfile  doxyfile.in
doc/examples/: Gyoto_Polar_example.ipynb  example-BG-star_4c.xml  example-BG-star_Multiple_Images.xml  example-BG-star_aligned.xml  example-complex-astrobj.xml  example-equat-hot-spot-polar.xml  example-fixed-star-KRZ.xml  example-fixed-star-KS.xml  example-fixed-star-RZ.xml  example-fixed-star-binaryBH-wip.xml  example-fixed-star-complex-metric-KS-wip.xml  example-fixed-star-complex-metric-KS.xml  example-fixed-star-minkowski-cartesian.xml  example-fixed-star-minkowski-spherical.xml  example-fixed-star-minkowski.xml  example-fixed-star.xml  example-fixedstar-balasingrumiller-4c.xml  example-fixedstar-balasingrumiller-aligned.xml  example-fixedstar-balasingrumiller-multiple-images.xml  example-fixedstar-rotstar3_1.xml  example-jet.xml  example-moving-star-CS.xml  example-moving-star-complex-metric.xml  example-moving-star.xml  example-movingstar-rotstar3_1.xml  example-oscil-torus.xml  example-page-thorne-disk-BL-with-basis.xml  example-page-thorne-disk-BL.xml  example-page-thorne-disk-KS.xml  example-polish-doughnut-RZ.xml  example-polish-doughnut-hayward-wormhole.xml  example-polish-doughnut.sbatch  example-polish-doughnut.xml  example-python-flared-disk-derived-kerrbl.xml  example-python-flared-disk-derived-kerrks.xml  example-python-flared-disk-inline.xml  example-python-flared-disk-simple.xml  example-python-flared-disk.xml  example-python-standard.xml  example-python-thindisk-derived.xml  (+23 more)
doc/user_guide/: GyotoManual.bib  GyotoManual.tex  Makefile  Makefile.in  README
include/: BGheader.h  Gyoto.h  GyotoAstrobj.h  GyotoBalasinGrumiller.h  GyotoBlackBodySpectrum.h  GyotoBlob.h  GyotoChernSimons.h  GyotoComplexAstrobj.h  GyotoComplexMetric.h  GyotoComplexSpectrometer.h  GyotoConfig.h.in  GyotoConverters.h  GyotoDeformedTorus.h  GyotoDefs.h  GyotoDirectionalDisk.h  GyotoDisk3D.h  GyotoDisk3D_BB.h  GyotoDynamicalDisk.h  GyotoDynamicalDisk3D.h  GyotoDynamicalDiskBolometric.h  GyotoEquatorialHotSpot.h  GyotoError.h  GyotoFactory.h  GyotoFactoryMessenger.h  GyotoFitsRW.h  GyotoFixedStar.h  GyotoFlaredDiskSynchrotron.h  GyotoFocalPlane.h  GyotoFreeStar.h  GyotoFunctors.h  GyotoGridData2D.h  GyotoHayward.h  GyotoHooks.h  GyotoInflateStar.h  GyotoJet.h  GyotoKappaDistributionSynchrotronSpectrum.h  GyotoKerr2PN.h  GyotoKerrBL.h  GyotoKerrKS.h  GyotoKonoplyaRezzollaZhidenko.h  (+59 more)
lib/: #Metric.C#  Astrobj.C  BG.C  BalasinGrumiller.C  BlackBodySpectrum.C  Blob.C  ChernSimons.C  ComplexAstrobj.C  ComplexMetric.C  ComplexSpectrometer.C  Converters.C  DeformedTorus.C  DirectionalDisk.C  Disk3D.C  Disk3D_BB.C  DynamicalDisk.C  DynamicalDisk3D.C  DynamicalDiskBolometric.C  EquatorialHotSpot.C  Error.C  Factory.C  FitsRW.C  FixedStar.C  FlaredDiskSynchrotron.C  FocalPlane.C  FreeStar.C  Functors.C  GridData2D.C  Hayward.C  Hooks.C  InflateStar.C  Jet.C  KappaDistributionSynchrotronSpectrum.C  Kerr2PN.C  KerrBL.C  KerrKS.C  KonoplyaRezzollaZhidenko.C  LorenePlug.C  Makefile  Makefile.am  (+69 more)
m4/: ax_pkg_swig.m4  gyoto.m4  python.m4
plugins/null/: Makefile.am  Makefile.in  README  aclocal.m4  compile  configure  configure.ac  depcomp
plugins/null/doc/: doxyfile
plugins/null/include/: GyotoNull.h
plugins/null/lib/: InitPlug.C  Makefile.am  Makefile.in  Null.C  NullPlug.C
plugins/null/m4/: libtool.m4  pkg.m4
plugins/python/: Makefile.in  README  README.md  aclocal.m4  configure  configure.ac  gyoto.in  missing
plugins/python/doc/examples/: example-python-astrobj.xml  example-python-flared-disk.xml  example-python-spectrum.xml  example-python-standard.xml  example-python-thindisk.xml  example-python.xml  example-thin-disk.xml  gyoto_sample_callbacks.py  gyoto_sample_metrics.py  gyoto_sample_spectra.py  gyoto_sample_standard.py  gyoto_sample_thindisks.py  test.py  test_KerrBL.py
plugins/python/include/: GyotoPython.h
plugins/python/lib/: Base.C  Makefile.am  Makefile.in  Metric.C  PythonPlug.C  Spectrum.C  Standard.C  ThinDisk.C  mk_video.C
plugins/python/m4/: ltoptions.m4  ltsugar.m4  ltversion.m4  lt~obsolete.m4  m4_ax_cxx_compile_stdcxx.m4  python.m4
python/: Makefile.in  PKG-INFO  README.md  doxy2swig.py  example-matte-painting.py  example-mpi.py  example-patterndisk.py  example-python.py  example.py  gyoto.cxx  gyoto.i  gyoto_lorene.i  gyoto_lorene.py  gyoto_std.i  gyoto_std.py  gyoto_std_swig.h  gyoto_swig.h  header.py  lorene_header.py  numpy.i  pyproject.toml.in  setup.py.in  setup_lorene.py.in  setup_std.py.in  std_header.py
python/doc/: conf.py  index.rst
python/gyoto/: __init__.py  _namespaces.py  animate.py  util.py  (+2 more)
yorick/: Makefile  Makefile.in  Makepkg  Orbite.i  README  README.gyotoy  RayTracing.i  check-directionaldisk.i  check-disk3d.i  check-helpers.i  check-kerrbl.i  check-kerrks.i  check-metric.i  check-minkowski.i  check-mpi.i  check-patterndisk.i  check-photon-BL.i  check-polish-doughnut.i  check-scenery.i  check-star.i  check-startrace.i  check.i  compare-integrators.i  config.status  configure.old  custom.i  custom1.i  gyoto.i  gyoto.info  gyoto.info.in  gyoto_AnalyticMetric.C  gyoto_Astrobj.C  gyoto_Idx.C  gyoto_Metric.C  gyoto_Metric.i  gyoto_Photon.C  gyoto_Photon.i  gyoto_Scenery.C  gyoto_Scenery.i  gyoto_Screen.C  (+28 more)
(+82 files in other folders)
